# ai-video-editor

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md  icelandic-reviewer.md  senior-programmer.md  video-editor.md
input/: test_video.edl.json  test_video.srt  test_video.vtt  test_video_large.srt  video_player.html
scripts/: __main__.py  audio_extractor.py  cli.py  edit_analyzer.py  edit_decision.py  edit_pipeline.py  exceptions.py  llm_client.py  pipeline.py  subtitle_writer.py  transcript_corrector.py  transcription.py  video_cutter.py
tests/: conftest.py  test_audio_extractor.py  test_cli.py  test_edit_analyzer.py  test_edit_decision.py  test_edit_pipeline.py  test_llm_client.py  test_pipeline.py  test_subtitle_writer.py  test_transcript_corrector.py  test_transcription.py  test_video_cutter.py
